[package]
name = "xuantie"
version = "0.0.1"
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Alibaba XuanTie RISC-V processors"
keywords = ["riscv", "register", "peripheral"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]

[dependencies]
bit_field = "0.10"
