[package]
name = "xuantie-riscv"
description = "Low level access to T-Head XuanTie RISC-V processors"
version = "0.0.0"
documentation = "https://docs.rs/xuantie-riscv"
license.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["riscv", "register", "peripheral"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]

[dependencies]
bit_field = "0.10"
bitflags = "2"
volatile-register = "0.2.2"

[lib]
name = "xuantie_riscv"
test = false
bench = false
